# aliceismissing

./: .coveragerc  .gitattributes  .gitignore  Dockerfile  README.md  all_file.txt  build.sh  clean_repo.sh  commit.py  commit.sh  commit_simple.py  create_superuser.py  entrypoint.sh  errors.txt  filter.py  gather_files.sh  last_push_output.txt  log.txt  manage.py  nginx.conf  pull.py  pyproject.toml  request.txt  requirements.txt  result.txt  run.sh  run_tests.py  run_tests.sh
aliceismissing/: asgi.py  settings.py  urls.py  wsgi.py
app/: run_tests.sh
app/tests/: README.md
app/tests/chat/: test_messaging.py
app/tests/game/: test_characters.py  test_messages.py
game/: admin.py  middleware.py  models.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_create_initial_game_data.py  0003_message_image_message_recipient.py  0004_message_system_type_alter_message_image_and_more.py
game/templatetags/: __init__.py  game_filters.py
repo-mirror/: config  packed-refs
repo-mirror/info/: refs
reports/: test_report_20250526_095835.txt  test_report_20250526_101143.txt  test_report_20250526_101858.txt
staticfiles/css/: game.css
templates/game/: base.html  card_detail.html  game_admin.html  game_admin_player_cards.html  game_detail.html  game_info.html  game_setup.html  home.html  login.html  message_detail.html  new_game.html  player_hand.html  register.html  select_character.html  test_error.html
tests/: settings.py
tests/chat/: test_messaging.py
tests/game/: test_characters.py  test_messages.py
tests/players/: test_players.py
(+11 files in other folders)
